--- a/roles/launch_EC2/vars/main.yml
+++ b/roles/launch_EC2/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 # vars file for ec2-launch
-ec2_access_key: "AKIAJP7QHWB6RAHZO3OQ" 
-ec2_secret_key: "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"
+ec2_access_key: "" 
+ec2_secret_key: ""
 ec2_launch_count: "1"
 ec2_launch_id: "002"
 ec2_launch_ami_id: "ami-ede2e889"
