--- a/roles/mule/tasks/main.yml
+++ b/roles/mule/tasks/main.yml
@@ -3,20 +3,13 @@
 #tasks file for mule installation 
 
 - name: Download mule_package
-  get_url: url=http://s3.amazonaws.com/70aaf9be67f9bf88e5e78adcd7d6aa34/mule-ee-distribution-standalone-${RUNTIME_VERSION}.tar.gz 
+  get_url: url=http://s3.amazonaws.com/70aaf9be67f9bf88e5e78adcd7d6aa34/mule-ee-distribution-standalone-3.7.1.tar.gz dest=/opt
+
   sudo: true
 
 - name: Unpack mule
-  unarchive:
-    src= "mule-ee-distribution-standalone-${RUNTIME_VERSION}.zip"
-    dest= "/opt"
-    force=no
-    copy=false
-    mode="0755"
-  tags: unpack
-
-
-  # Environment setup.
+  command: tar -xvzf /opt/mule-ee-distribution-standalone-3.7.1.tar.gz
+# Environment setup.
 - name: Set JAVA_HOME if configured.
   template:
     src: java_home.sh.j2
